Sistema completo. Novas Funcionalidades: salvamento automático, avanço de noite, sistema de Score, dificuldade padrão (agressiva)